# news-please

./: .git-blame-ignore-revs  .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py
newsplease/: __init__.py  __main__.py  config.py  single_crawler.py
newsplease/config/: config.cfg  config_lib.cfg
newsplease/crawler/: commoncrawl_crawler.py  commoncrawl_extractor.py  simple_crawler.py
newsplease/crawler/spiders/: download_crawler.py  gdelt_crawler.py  recursive_crawler.py  recursive_sitemap_crawler.py  rss_crawler.py  sitemap_crawler.py
newsplease/examples/: commoncrawl.py
newsplease/helper_classes/: heuristics.py  parse_crawler.py  savepath_parser.py  url_extractor.py
newsplease/helper_classes/sub_classes/: heuristics_manager.py
newsplease/pipeline/: pipelines.py
newsplease/pipeline/extractor/: article_extractor.py  cleaner.py
newsplease/pipeline/extractor/comparer/: comparer_date.py  comparer_description.py  comparer_text.py
newsplease/pipeline/extractor/extractors/: date_extractor.py  newspaper_extractor.py
