[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["ez_setup", "examples", "tests"]

[project]
name = "news-please"
version = "1.6.13"
requires-python = ">=3.8"
dependencies = [
  "ago>=0.0.9",
  "beautifulsoup4>=4.3.2",
  "boto3",
  "dotmap>=1.2.17",
  "elasticsearch>=2.4",
  "faust-cchardet>=2.1.18",                # To remove ?
  "hjson>=1.5.8",
  "hurry.filesize>=0.9",
  "langdetect>=1.0.7",
  "lxml>=3.3.5",
  "lxml-html-clean>=0.1.1",                # To remove ?
  "newspaper4k>=0.9.3.1",
  "plac>=0.9.6",
  "psycopg2-binary>=2.8.4",
  "PyDispatcher>=2.0.5",                   # To remove ?
  "PyMySQL>=0.7.9",
  "pywin32>=220; sys_platform == 'win32'",
  "python-dateutil>=2.4.0",                # To remove ?
  "readability-lxml==0.8.1",               # The 0.8.4.1 version is broken. cf. https://github.com/buriy/python-readability/issues/194
  "redis",
  "scrapy>=1.1.0",
  "six>=1.10.0",
  "typing-extensions>=4.7.0",
  "warcio>=1.3.3",
]
authors = [{ name = "Felix Hamborg", email = "felix.hamborg@uni-konstanz.de" }]
description = "news-please is an open source easy-to-use news extractor that just works."
keywords = "news crawler news scraper news extractor crawler extractor scraper information retrieval"
license = "Apache License 2.0"
license-files = ["LICENCE.TXT"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Repository = "https://github.com/fhamborg/news-please"

[project.scripts]
news-please = "newsplease.__main__:main"
news-please-cc = "newsplease.examples.commoncrawl:main"
